# VNPT_Performance_Insights

./: .dockerignore  .gitignore  Dockerfile  README.md  backup_mysql.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  pages.toml  pages_ldp.toml
EM_MODULE/: config.py  module_delete.py  module_expand.py  module_explaination.py  module_insert.py  module_login.py  module_todo.py  module_users.py  module_view.py
LDP_MODULE/: ldp_board.py  ldp_delete.py  ldp_insert.py  ldp_view.py
PROJECTS/: config.py  module_delete.py  module_expand.py  module_explaination.py  module_insert.py  module_login.py  module_todo.py  module_users.py  module_view.py
data/: KẾT QUẢ THỰC HIỆN DOANH THU 2024_so sánh cùng kỳ.xlsx  input_giao.xlsx  input_kehoach.xlsx  input_thuchien.xlsx  ketquathuchien_up_new.xlsx  ketquathuchien_up_root.xlsx  output.xlsx  thuchien_ptm_up.csv
docs/: development-note.md  streamlit-congig.txt  streamlit_expanded.txt  todo-check.md
documentation/: module_documentation.py
examples/: Note.py  example_calendar.py  example_dashboard.py  example_lottie.py  streamlit_authen.py
pages_ldp/: board.py  delete_ldp.py  insert_ldp.py  view_ldp.py
pages_view/: delete.py  expand.py  explaination.py  home.py  insert.py  todo_check.py  users.py  view.py
references/: file_mau_app_vnpt.py
reports/: Tài liệu hướng dẫn sử dụng PIS.docx  main_report.ipynb  vuongconvan.py
src/: style.css  style_board.css  style_delete.css  style_expand.css  style_explaination.css  style_general.css  style_home.css  style_insert.css  style_todo.css  style_users.css  (+1 more)
(+35 files in other folders)
