[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "vnpt_performance_insights"
version = "0.0.1"
description = "This project provided application support for decision making and managerment data"
authors = [
  { name = "team_data_science" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.5"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["vnpt_performance_insights"]
force_sort_within_sections = true
